verif/test/deca/codegen/invalid/logiques/while-bad-type-verif.res
src/test/deca/codegen/invalid/logiques/while-bad-type.deca:12:10: Incompatible types for comparison operator '==' between 'boolean' and 'int'
